// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`feeds-speeds FSWizard parity cases > keeps DOC-only endmill cases stable when WOC is left at default-off 1`] = `
{
  "chipLoadPerTooth": 0.0027,
  "feedRate": 22.65,
  "name": "4140 doc only shallow",
  "rpm": 2079,
  "sfm": 272.13,
}
`;

exports[`feeds-speeds FSWizard parity cases > keeps DOC-only endmill cases stable when WOC is left at default-off 2`] = `
{
  "chipLoadPerTooth": 0.002,
  "feedRate": 18.22,
  "name": "4140 doc only deeper",
  "rpm": 2284,
  "sfm": 298.92,
}
`;

exports[`feeds-speeds FSWizard parity cases > keeps manual parity-case outputs stable 1`] = `
{
  "chipLoadPerTooth": 0.0034,
  "feedRate": 35.39,
  "name": "4140 baseline",
  "rpm": 2599,
  "sfm": 340.16,
}
`;

exports[`feeds-speeds FSWizard parity cases > keeps manual parity-case outputs stable 2`] = `
{
  "chipLoadPerTooth": 0.0032,
  "feedRate": 31.46,
  "name": "4140 heavier WOC",
  "rpm": 2450,
  "sfm": 320.72,
}
`;

exports[`feeds-speeds FSWizard parity cases > keeps manual parity-case outputs stable 3`] = `
{
  "chipLoadPerTooth": 0.0034,
  "feedRate": 35.39,
  "name": "4140 shallow DOC",
  "rpm": 2599,
  "sfm": 340.16,
}
`;
